--- a/Extension/languages/da.json
+++ b/Extension/languages/da.json
@@ -3,12 +3,12 @@
     "tab.installed.subHeading.didInstallQuestion": "Har du installeret applikationen endnu?",
     "tab.installed.subHeading.notInstalled": "Ikke? Følg disse trin:",
     "tab.installed.instructions.download": "Download den seneste version for $1",
-    "tab.installed.instruction.github": "mit GitHub depot",
+    "tab.installed.instructions.github": "mit GitHub depot",
     "tab.installed.instructions.wait": "Åben installatøren og vent til den er installeret",
     "tab.installed.instructions.warnings": "Du modtager nok en advarsel om FireWall og SmartScreen (Jeg lover, det er ikke en virus)",
     "tab.installed.instructions.autostart": "Applikationen vil starte automatisk, du kan tjekke dette ved at kigge i din proceslinje (Windows) eller din menubar (MacOS)",
     "tab.installed.subHeading.ready": "Allerede? Du er klar!",
-    "tab.installed.intro": "Start ved at se en video på YouTube, ved at se dine elskede streamers på Twitch, se dine favorit animes på KissAnime eller JKAnime, måske endda Netflix... Hvem ved?<br>Eller du kan bare lytte til dine favorit sange på SoundCloud og YouTube Musik. Indstillinger kan blive fundet ved at klikke PreMiD ikonet i din browser.",
+    "tab.installed.intro": "Start ved at bruge en af vores understøttede services og nyd den søde smag af at være sej.",
     "tab.updated.heading": "PreMiD er blevet opdateret!",
     "tab.updated.subHeading.whatsNew": "Hvad er nyt?",
     "tab.updated.subHeading.whatChanged": "Hvad er ændret?",
@@ -25,5 +25,23 @@
     "popup.options.darkTheme": "Mørkt Tema",
     "connectionInfo.connected": "Forbundet til %SERVICE%",
     "connectionInfo.disconnected": "Afbrudt fra %SERVICE%",
-    "popup.options.systemStartup": "System startup"
+    "popup.options.systemStartup": "System startup",
+    "presence.episode": "Episode",
+    "presence.browsing": "Browsing...",
+    "presence.watching": "ser",
+    "tab.installed.letsStart": "Lad os begynde!",
+    "tab.installed.getSupport": "Få hjælp",
+    "tab.installed.likeThisProject": "Synes godt om dette projekt? Stjern det på $1!",
+    "tab.updated.gotIt": "Forstået!",
+    "tab.updated.added0": "Nyt design!",
+    "tab.updated.added1": "Rabb.it understøttelse",
+    "tab.updated.nextVersion.added2": "Amazon Prime understøttelse",
+    "tab.updated.added3": "Anime4You understøttelse",
+    "tab.updated.nextVersion.added4": "CrunchyRoll understøttelse",
+    "tab.updated.changed0": "Masser af insekter dræbt, de ville ikke genere dig længere",
+    "tab.updated.changed1": "Masser af omskrivninger",
+    "extension.description": "PreMiD tilføjer Discord Rich Presence integration, mediekontrol og meget mere til YouTube/YouTube Musik, Twitch etc...",
+    "popup.options.connectInfo": "Forbindelsesinformation",
+    "popup.error": "Fejl",
+    "popup.error.message": "Kunne ikke indlæse kredit"
 }
