--- a/Extension/languages/nl.json
+++ b/Extension/languages/nl.json
@@ -3,7 +3,7 @@
     "tab.installed.subHeading.didInstallQuestion": "Heb je de applicatie al geïnstalleerd?",
     "tab.installed.subHeading.notInstalled": "Zo niet? Volg deze stappen:",
     "tab.installed.instructions.download": "Download de nieuwste versie vanaf $1",
-    "tab.installed.instruction.github": "mijn repository",
+    "tab.installed.instructions.github": "mijn repository",
     "tab.installed.instructions.wait": "Open het installatieprogramma en wacht totdat het is geïnstalleerd",
     "tab.installed.instructions.warnings": "U ontvangt mogelijk een waarschuwing over FireWall en SmartScreen (het is geen virus dat beloof ik)",
     "tab.installed.instructions.autostart": "De applicatie zou automatisch moeten starten, u kunt dit controleren door te kijken naar uw taakbalk (Windows) of uw menubalk (MacOS)",
@@ -15,10 +15,33 @@
     "presence.playback.playing": "Afspelen",
     "presence.playback.paused": "Afspelen gepauzeerd",
     "popup.tabs.options": "Opties",
+    "popup.tabs.credits": "Credits",
     "popup.options.headings.general": "Algemeen",
     "popup.options.headings.presences": "Presences",
     "popup.options.enabled": "Ingeschakeld",
     "popup.options.titleMenubar": "Titel Menubar",
     "popup.options.mediaControls": "Mediabediening",
-    "popup.options.checkForUpdates": "Controleer op updates"
+    "popup.options.checkForUpdates": "Controleer op updates",
+    "popup.options.darkTheme": "Donker Thema",
+    "connectionInfo.connected": "Verbonden met %SERVICE%",
+    "connectionInfo.disconnected": "Verbinding met  %SERVICE% verbroken",
+    "popup.options.systemStartup": "Sys",
+    "presence.episode": "Aflevering",
+    "presence.browsing": "Browsen...",
+    "presence.watching": "Aan het kijken",
+    "tab.installed.letsStart": "Laten we beginnen!",
+    "tab.installed.getSupport": "Krijg ondersteuning",
+    "tab.installed.likeThisProject": "Vind je dit project leuk? Ster het op $1!",
+    "tab.updated.gotIt": "Begrepen!",
+    "tab.updated.added0": "Nieuw ontwerp!",
+    "tab.updated.added1": "Rabb.it ondersteuning",
+    "tab.updated.nextVersion.added2": "Amazon Prime ondersteuning",
+    "tab.updated.added3": "Anime4You ondersteuning",
+    "tab.updated.nextVersion.added4": "CrunchyRoll ondersteuning",
+    "tab.updated.changed0": "Er zijn veel bugs bestreden, ze zullen je niet meer lastig vallen",
+    "tab.updated.changed1": "Veel herschrijvingen",
+    "extension.description": "PreMiD voegt Discord Rich Presence-integratie, mediabediening en nog veel meer toe aan YouTube / YouTube Music, Twitch enz.",
+    "popup.options.connectInfo": "Verbindingsinformatie",
+    "popup.error": "Foutmelding",
+    "popup.error.message": "Kan credits niet laden"
 }
