Update fr.json (POEditor.com)

--- a/Extension/languages/fr.json
+++ b/Extension/languages/fr.json
@@ -3,7 +3,7 @@
     "tab.installed.subHeading.didInstallQuestion": "Avez-vous déjà installé l'application ?",
     "tab.installed.subHeading.notInstalled": "Non ? Suivez ces étapes :",
     "tab.installed.instructions.download": "Téléchargez la dernière version depuis $1",
-    "tab.installed.instruction.github": "mon dépôt GitHub",
+    "tab.installed.instructions.github": "mon dépôt GitHub",
     "tab.installed.instructions.wait": "Ouvrez l'installateur et attendez la fin de l'installation",
     "tab.installed.instructions.warnings": "Vous pourriez recevoir un avertissement du pare-feu ou de SmartScreen (je promets que ce n'est pas un virus)",
     "tab.installed.instructions.autostart": "L'application devrait démarrer automatiquement, vous pouvez le vérifier en regardant votre barre des tâches (Windows) ou votre barre de menu (MacOS)",
@@ -28,5 +28,20 @@
     "popup.options.systemStartup": "Démarrage du système",
     "presence.episode": "",
     "presence.browsing": "",
-    "presence.watching": ""
+    "presence.watching": "",
+    "tab.installed.letsStart": "",
+    "tab.installed.getSupport": "",
+    "tab.installed.likeThisProject": "",
+    "tab.updated.gotIt": "",
+    "tab.updated.added0": "",
+    "tab.updated.added1": "",
+    "tab.updated.nextVersion.added2": "",
+    "tab.updated.added3": "",
+    "tab.updated.nextVersion.added4": "",
+    "tab.updated.changed0": "",
+    "tab.updated.changed1": "",
+    "extension.description": "",
+    "popup.options.connectInfo": "",
+    "popup.error": "",
+    "popup.error.message": ""
 }
