Update la.json (POEditor.com)

--- a/Extension/languages/la.json
+++ b/Extension/languages/la.json
@@ -3,7 +3,7 @@
     "tab.installed.subHeading.didInstallQuestion": "Iamne usum instruxisti",
     "tab.installed.subHeading.notInstalled": "Nonne est? Obtempera ii gradi",
     "tab.installed.instructions.download": "Instruere suprema forma a $1",
-    "tab.installed.instruction.github": "GitHub logium meum",
+    "tab.installed.instructions.github": "GitHub logium meum",
     "tab.installed.instructions.wait": "Aperi instruens et exspecta dum instruxit",
     "tab.installed.instructions.warnings": "Admonitum super FireWall et SmartScreen accipere potes (Virus non est, promitto)",
     "tab.installed.instructions.autostart": "Usus statim incipere debet, id per optutu ad regula initii (Windows et MacOS) tua examinare potes",
@@ -15,11 +15,21 @@
     "presence.playback.playing": "Canens rursus",
     "presence.playback.paused": "Canens rursus intermissum",
     "popup.tabs.options": "Investitura",
+    "popup.tabs.credits": "Quis id facit",
     "popup.options.headings.general": "Communis",
     "popup.options.headings.presences": "Salus",
     "popup.options.enabled": "Activus",
     "popup.options.titleMenubar": "Indicium",
     "popup.options.mediaControls": "Media gubernatio",
     "popup.options.checkForUpdates": "Quaerens correctiones",
-    "popup.options.systemStartup": "Incipens ad disciplina initium"
+    "popup.options.darkTheme": "Niger",
+    "connectionInfo.connected": "Adnexus ad %SERVICE%",
+    "connectionInfo.disconnected": "Discretus de %SERVICE%",
+    "popup.options.systemStartup": "Incipens ad disciplina initium",
+    "presence.episode": "Series",
+    "presence.browsing": "Inquirens...",
+    "presence.watching": "spectat",
+    "tab.installed.letsStart": "Initium!",
+    "tab.installed.getSupport": "Auxilium nancisci",
+    "tab.installed.likeThisProject": "Id amas? Largi 1$!"
 }
