Update pt_PT.json (POEditor.com)

--- a/Extension/languages/pt_PT.json
+++ b/Extension/languages/pt_PT.json
@@ -3,12 +3,12 @@
     "tab.installed.subHeading.didInstallQuestion": "Já instalas-te a aplicação?",
     "tab.installed.subHeading.notInstalled": "Não? Segue estes passos:",
     "tab.installed.instructions.download": "Baixa a ultima versão apatir de $1",
-    "tab.installed.instruction.github": "o meu repositorio do GitHub",
+    "tab.installed.instructions.github": "o meu repositorio do GitHub",
     "tab.installed.instructions.wait": "Abre o instalador e espera ",
     "tab.installed.instructions.warnings": "Tu podes receber um aviso do FireWall ou SmartScreen ( Não é um vírus eu prometo! )",
     "tab.installed.instructions.autostart": "O aplicativo deve iniciar automaticamente, tu podes verificar isso olhando para a tua barra de tarefas (Windows) ou da tua barra de menu (MacOS)",
     "tab.installed.subHeading.ready": "Sim? Então estas pronto para ir!",
-    "tab.installed.intro": "Começa a assistir um vídeo no Youtube, assistir o teus streamers favoritos na Twitch, Assiste os teus Animes favoritos no KissAnime ou JKAnime, ou talvez até na Netflix ... Quem sabe?<br> Ou apenas ouves as tuas músicas no SoundCloud e no Youtube Music. As configurações podem ser encontradas clicando no ícone PreMiD no teu navegador.",
+    "tab.installed.intro": "Começa a usar um dos nossos serviços suportados e aproveita o doce sabor da frieza!",
     "tab.updated.heading": "PreMiD foi atualizado!",
     "tab.updated.subHeading.whatsNew": "O que há de novo?",
     "tab.updated.subHeading.whatChanged": "O que mudou?",
@@ -25,5 +25,23 @@
     "popup.options.darkTheme": "Tema escuro",
     "connectionInfo.connected": "%SERVICE% foi conectado",
     "connectionInfo.disconnected": "%SERVICE% foi disconectado",
-    "popup.options.systemStartup": "Inicializar com o sistema"
+    "popup.options.systemStartup": "Inicializar com o sistema",
+    "presence.episode": "Episódio",
+    "presence.browsing": "A pesquisar...",
+    "presence.watching": "a vêr",
+    "tab.installed.letsStart": "Vamos Começar!",
+    "tab.installed.getSupport": "Receba suporte",
+    "tab.installed.likeThisProject": "Gostas deste projeto? Apoia com $1",
+    "tab.updated.gotIt": "Consegui!",
+    "tab.updated.added0": "Novo Design",
+    "tab.updated.added1": "Rabb.it suporte",
+    "tab.updated.nextVersion.added2": "Amazon Prime suporte",
+    "tab.updated.added3": "Anime4You suporte",
+    "tab.updated.nextVersion.added4": "CrunchyRoll suporte",
+    "tab.updated.changed0": "Muitos bugs corrigidos, eles não vão mais incomodar",
+    "tab.updated.changed1": "Muitas reescritas",
+    "extension.description": "O PreMiD adiciona uma integração com o Discord Rich Presence, Controles de Mídia e muito mais para YouTube/YouTube Music, Twitch etc..",
+    "popup.options.connectInfo": "Informação de Conexão",
+    "popup.error": "Erro",
+    "popup.error.message": "Não possível carregar os créditos"
 }
