--- a/Extension/languages/es.json
+++ b/Extension/languages/es.json
@@ -3,7 +3,7 @@
     "tab.installed.subHeading.didInstallQuestion": "Ya has instalado esta aplicación?",
     "tab.installed.subHeading.notInstalled": "No? Sigue estos pasos.",
     "tab.installed.instructions.download": "Descarga la versión mas nueva desde $1",
-    "tab.installed.instruction.github": "Mi repositorio de GitHub",
+    "tab.installed.instructions.github": "Mi repositorio de GitHub",
     "tab.installed.instructions.wait": "Abrir el instalador y esperar hasta que se instale",
     "tab.installed.instructions.warnings": "Tu puedes recibir una alerta sobre FireWall y SmartScreen (No es un virus lo prometo)",
     "tab.installed.instructions.autostart": "La aplicación debería iniciarse automáticamente, Tu puedes checar esto en la Taskbar (Windows) o tu menubar (MacOS)",
@@ -22,8 +22,26 @@
     "popup.options.titleMenubar": "Titulo de Barra de menú",
     "popup.options.mediaControls": "Controles Multimedia",
     "popup.options.checkForUpdates": "Ver si hay actualizaciones",
-    "popup.options.darkTheme": "Tema Negro",
+    "popup.options.darkTheme": "Tema Oscuro",
     "connectionInfo.connected": "Conectado a %SERVICE%",
     "connectionInfo.disconnected": "Desconectado de %SERVICE%",
-    "popup.options.systemStartup": "Inicio del Sistema"
+    "popup.options.systemStartup": "Inicio del Sistema",
+    "presence.episode": "Episodio",
+    "presence.browsing": "Navegando...",
+    "presence.watching": "Viendo",
+    "tab.installed.letsStart": "Empecemos!",
+    "tab.installed.getSupport": "Obtén soporte",
+    "tab.installed.likeThisProject": "Te gusta este proyecto? Sopórtalo por $1",
+    "tab.updated.gotIt": "Entendido!",
+    "tab.updated.added0": "Nuevo diseño!",
+    "tab.updated.added1": "Soporte de Rabb.it",
+    "tab.updated.nextVersion.added2": "Soporte de Amazon Prime",
+    "tab.updated.added3": "Soporte de Anime4YOU",
+    "tab.updated.nextVersion.added4": "Soporte de CrunchyRoll",
+    "tab.updated.changed0": "Muchos bugs matados, Ellos no te molestaran mas!",
+    "tab.updated.changed1": "Muchas re-escribidas.",
+    "extension.description": "PreMID agrega integración de Presencia rica de discord, Controles Multimedia y mucho mas a Youtube/Youtube Music, Twitch etc...",
+    "popup.options.connectInfo": "Información de la conexión",
+    "popup.error": "Error",
+    "popup.error.message": "No se pudieron cargar los creditos"
 }
