Update sv.json (POEditor.com)

--- a/Extension/languages/sv.json
+++ b/Extension/languages/sv.json
@@ -3,7 +3,7 @@
     "tab.installed.subHeading.didInstallQuestion": "Har du installerat programmet ännu?",
     "tab.installed.subHeading.notInstalled": "Nej? Följ dessa steg:",
     "tab.installed.instructions.download": "Ladda ner den senaste versionen från $1",
-    "tab.installed.instruction.github": "mitt GitHub-förråd",
+    "tab.installed.instructions.github": "mitt GitHub-förråd",
     "tab.installed.instructions.wait": "Öppna installationsprogrammet och vänta tills det installeras",
     "tab.installed.instructions.warnings": "Du kanske får en varning om brandvägg och Smartscreen (det är inte ett virus jag lovar)",
     "tab.installed.instructions.autostart": "Applikationen bör starta automatiskt, du kan kontrollera detta genom att titta på ditt aktivitetsfält (Windows) eller menyraden (Mac OS)",
@@ -15,11 +15,33 @@
     "presence.playback.playing": "Spelar tillbaka",
     "presence.playback.paused": "Uppspelning pausad",
     "popup.tabs.options": "Alternativ",
+    "popup.tabs.credits": "Medhjälpare",
     "popup.options.headings.general": "Allmänt",
     "popup.options.headings.presences": "Presenceser",
     "popup.options.enabled": "Aktiverad",
     "popup.options.titleMenubar": "Titel Menubar",
     "popup.options.mediaControls": "Mediekontroller",
     "popup.options.checkForUpdates": "Sök efter uppdateringar",
-    "popup.options.systemStartup": "Systemstart"
+    "popup.options.darkTheme": "Mörkt Tema",
+    "connectionInfo.connected": "Anslöt till %SERVICE%",
+    "connectionInfo.disconnected": "Kopplade bort från %SERVICE%",
+    "popup.options.systemStartup": "Systemstart",
+    "presence.episode": "Avsnitt",
+    "presence.browsing": "Bläddrar...",
+    "presence.watching": "Tittar på",
+    "tab.installed.letsStart": "Låt oss börja!",
+    "tab.installed.getSupport": "Få stöd",
+    "tab.installed.likeThisProject": "Gilla detta projekt? Stjärna den på $1!",
+    "tab.updated.gotIt": "Jag fattar!",
+    "tab.updated.added0": "Ny design!",
+    "tab.updated.added1": "Rabb.it stöd",
+    "tab.updated.nextVersion.added2": "Amazon Prime stöd",
+    "tab.updated.added3": "Anime4You stöd",
+    "tab.updated.nextVersion.added4": "CrunchyRoll stöd",
+    "tab.updated.changed0": "Massor av buggar dödade, de kommer inte att störa dig längre",
+    "tab.updated.changed1": "Massor av omskrivningar",
+    "extension.description": "PreMiD lägger till Discord Rich Presence integration, Media kontroller och mycket mer till YouTube / YouTube Music, Twitch osv...\n",
+    "popup.options.connectInfo": "Anslutningsinfo",
+    "popup.error": "Fel",
+    "popup.error.message": "Kunde inte ladda medhjälpar listan"
 }
