Update fr.json (POEditor.com)

--- a/Extension/languages/fr.json
+++ b/Extension/languages/fr.json
@@ -43,5 +43,6 @@
     "extension.description": "",
     "popup.options.connectInfo": "",
     "popup.error": "",
-    "popup.error.message": ""
+    "popup.error.message": "",
+    "presence.lookingForAnime": ""
 }
