--- a/Extension/languages/he.json
+++ b/Extension/languages/he.json
@@ -1,47 +1,47 @@
 {
-  "tab.installed.heading": "תודה לך שהורדת את  PreMiD",
-  "tab.installed.subHeading.didInstallQuestion": "כבר הורדת את התוכנה?\n",
-  "tab.installed.subHeading.notInstalled": "לא? אם כך תעקוב אחרי השלבים הבאים:",
-  "tab.installed.instructions.download": "הורד את הגרסה העדכנית ביותר ב1$",
-  "tab.installed.instructions.github": "המאגר GitHub שלי",
-  "tab.installed.instructions.wait": "פתח את ההתקנה וחכה עד שזה יהיה מוכן",
-  "tab.installed.instructions.warnings": "יש סיכוי שתקבל אזהרה על FireWall וSmartScreen (זה לא וירוס, אני מבטיח)",
-  "tab.installed.instructions.autostart": "התוכנה אמורה להתכיל אוטומטית, אתה יכול לבדוק את זה בכך שתסתכל על הTaskbar או על ה Menubar ",
-  "tab.installed.subHeading.ready": "כן? אז אתה מוכן להתחיל!",
-  "tab.installed.intro": "התחל בכך שתצפה בסרטונים בYouTube, צפה בסטרימים האהובים עליך בTwitch, צפה באנימות האהובות עליך בKissAnime או JKAnime, אפילו אולי Netflix... מי יודע<br>\nאו שתקשיב לשירים האהובים עליך בSoundCloud או בYouTube Music. \nכדי למצוא את ההגדרות לחצו על האייקון של PreMiD בדפדפן שלכם",
-  "tab.updated.heading": "PreMiD עודכן!",
-  "tab.updated.subHeading.whatsNew": "מה חדש?",
-  "tab.updated.subHeading.whatChanged": "מה השתנה?",
-  "presence.playback.playing": "מפעיל מחדש",
-  "presence.playback.paused": "Playback הופסק",
-  "popup.tabs.options": "הגדרות",
-  "popup.tabs.credits": "תודות",
-  "popup.options.headings.general": "כללי",
-  "popup.options.headings.presences": "הצגות",
-  "popup.options.enabled": "דלוק",
-  "popup.options.titleMenubar": "Title Menubar  (Mac OS only)",
-  "popup.options.mediaControls": "הגדרות מדיה",
-  "popup.options.checkForUpdates": "בדוק עדכונים",
-  "popup.options.darkTheme": "רקע שחור",
-  "connectionInfo.connected": "התחברות ל%SERVICE%",
-  "connectionInfo.disconnected": "התנתקות מ%SERVICE%",
-  "popup.options.systemStartup": "הדלקת System",
-  "presence.episode": "פרק",
-  "presence.browsing": "גולש..",
-  "presence.watching": "צופה",
-  "tab.installed.letsStart": "בואו נתחיל!",
-  "tab.installed.getSupport": "קבל תמיכה",
-  "tab.installed.likeThisProject": "אוהב את הפרוייקט הזה? תשפר אותו רק בשביל 1$!",
-  "tab.updated.gotIt": "הבנתי!",
-  "tab.updated.added0": "עיצוב חדש!",
-  "tab.updated.added1": "Rabb.it תמיכה",
-  "tab.updated.nextVersion.added2": "Amazon Prime תמיכה",
-  "tab.updated.added3": "Anime4You תמיכה",
-  "tab.updated.nextVersion.added4": "CrunchyRoll תמיכה",
-  "tab.updated.changed0": "הרבה באגים הושמתו, הם לא יפריעו לך יותר",
-  "tab.updated.changed1": "הרבה רישומים מחדש",
-  "extension.description": "PreMiD מוסיפה אינטגרציית Discord Rich Presence, הגדרות מדיה ועוד הרבה לYouTube/YouTube Music, Twitch ועוד..",
-  "popup.options.connectInfo": "אודות התחברות",
-  "popup.error": "שגיאה",
-  "popup.error.message": "לא היה ניתן לטעון את ההשראים"
+    "tab.installed.heading": "תודה לך שהורדת את  PreMiD",
+    "tab.installed.subHeading.didInstallQuestion": "כבר הורדת את התוכנה?\n",
+    "tab.installed.subHeading.notInstalled": "לא? אם כך תעקוב אחרי השלבים הבאים:",
+    "tab.installed.instructions.download": "הורד את הגרסה העדכנית ביותר ב1$",
+    "tab.installed.instructions.github": "המאגר GitHub שלי",
+    "tab.installed.instructions.wait": "פתח את ההתקנה וחכה עד שזה יהיה מוכן",
+    "tab.installed.instructions.warnings": "יש סיכוי שתקבל אזהרה על FireWall וSmartScreen (זה לא וירוס, אני מבטיח)",
+    "tab.installed.instructions.autostart": "התוכנה אמורה להתכיל אוטומטית, אתה יכול לבדוק את זה בכך שתסתכל על הTaskbar או על ה Menubar ",
+    "tab.installed.subHeading.ready": "כן? אז אתה מוכן להתחיל!",
+    "tab.installed.intro": "התחל בכך שתצפה בסרטונים בYouTube, צפה בסטרימים האהובים עליך בTwitch, צפה באנימות האהובות עליך בKissAnime או JKAnime, אפילו אולי Netflix... מי יודע<br>\nאו שתקשיב לשירים האהובים עליך בSoundCloud או בYouTube Music. \nכדי למצוא את ההגדרות לחצו על האייקון של PreMiD בדפדפן שלכם",
+    "tab.updated.heading": "PreMiD עודכן!",
+    "tab.updated.subHeading.whatsNew": "מה חדש?",
+    "tab.updated.subHeading.whatChanged": "מה השתנה?",
+    "presence.playback.playing": "מפעיל מחדש",
+    "presence.playback.paused": "Playback הופסק",
+    "popup.tabs.options": "הגדרות",
+    "popup.tabs.credits": "תודות",
+    "popup.options.headings.general": "כללי",
+    "popup.options.headings.presences": "הצגות",
+    "popup.options.enabled": "דלוק",
+    "popup.options.titleMenubar": "Title Menubar  (Mac OS only)",
+    "popup.options.mediaControls": "הגדרות מדיה",
+    "popup.options.checkForUpdates": "בדוק עדכונים",
+    "popup.options.darkTheme": "רקע שחור",
+    "connectionInfo.connected": "התחברות ל%SERVICE%",
+    "connectionInfo.disconnected": "התנתקות מ%SERVICE%",
+    "popup.options.systemStartup": "הדלקת System",
+    "presence.episode": "פרק",
+    "presence.browsing": "גולש..",
+    "presence.watching": "צופה",
+    "tab.installed.letsStart": "בואו נתחיל!",
+    "tab.installed.getSupport": "קבל תמיכה",
+    "tab.installed.likeThisProject": "אוהב את הפרוייקט הזה? תשפר אותו רק בשביל 1$!",
+    "tab.updated.gotIt": "הבנתי!",
+    "tab.updated.added0": "עיצוב חדש!",
+    "tab.updated.added1": "Rabb.it תמיכה",
+    "tab.updated.nextVersion.added2": "Amazon Prime תמיכה",
+    "tab.updated.added3": "Anime4You תמיכה",
+    "tab.updated.nextVersion.added4": "CrunchyRoll תמיכה",
+    "tab.updated.changed0": "הרבה באגים הושמתו, הם לא יפריעו לך יותר",
+    "tab.updated.changed1": "הרבה רישומים מחדש",
+    "extension.description": "PreMiD מוסיפה אינטגרציית Discord Rich Presence, הגדרות מדיה ועוד הרבה לYouTube/YouTube Music, Twitch ועוד..\n",
+    "popup.options.connectInfo": "אודות התחברות",
+    "popup.error": "שגיאה",
+    "popup.error.message": "לא היה ניתן לטעון את ההשראים"
 }
