--- a/Firefox_Extension/languages/en.json
+++ b/Firefox_Extension/languages/en.json
@@ -28,7 +28,7 @@
   "popup.options.systemStartup": "System Startup",
   "presence.episode": "Episode",
   "presence.browsing": "Browsing...",
-  "presence.watching": "watching",
+  "presence.watching": "Watching",
   "tab.installed.letsStart": "Let's Start!",
   "tab.installed.getSupport": "Get Support",
   "tab.installed.likeThisProject": "Like this project? Star it on $1!",
