--- a/Extension/languages/fr.json
+++ b/Extension/languages/fr.json
@@ -26,23 +26,23 @@
     "connectionInfo.connected": "Connecté à %SERVICE%",
     "connectionInfo.disconnected": "Déconnecté de %SERVICE%",
     "popup.options.systemStartup": "Démarrage du système",
-    "presence.episode": "",
-    "presence.browsing": "",
-    "presence.watching": "",
-    "tab.installed.letsStart": "",
-    "tab.installed.getSupport": "",
+    "presence.episode": "Épisode",
+    "presence.browsing": "En train de naviguer...",
+    "presence.watching": "en train de regarder",
+    "tab.installed.letsStart": "Commençons!",
+    "tab.installed.getSupport": "Obtenir de l'aide",
     "tab.installed.likeThisProject": "",
     "tab.updated.gotIt": "",
-    "tab.updated.added0": "",
-    "tab.updated.added1": "",
-    "tab.updated.nextVersion.added2": "",
-    "tab.updated.added3": "",
-    "tab.updated.nextVersion.added4": "",
-    "tab.updated.changed0": "",
-    "tab.updated.changed1": "",
-    "extension.description": "",
-    "popup.options.connectInfo": "",
-    "popup.error": "",
-    "popup.error.message": "",
+    "tab.updated.added0": "Nouveau design!",
+    "tab.updated.added1": "Support de Rabb.it",
+    "tab.updated.nextVersion.added2": "Support d'Amazon Prime",
+    "tab.updated.added3": "Support d'Anime4You",
+    "tab.updated.nextVersion.added4": "Support de CrunchyRoll",
+    "tab.updated.changed0": "Beaucoup de bugs tués, ils ne vous dérangeront plus",
+    "tab.updated.changed1": "Beaucoup de réécritures",
+    "extension.description": "PreMiD ajoute l'intégration Discord Rich Presence, les commandes multimédias et bien plus encore à YouTube/YouTube Music, Twitch, etc...",
+    "popup.options.connectInfo": "Informations de connexion",
+    "popup.error": "Erreur",
+    "popup.error.message": "Impossible de charger les crédits",
     "presence.lookingForAnime": ""
 }
