Update da.json (POEditor.com)

--- a/Extension/languages/da.json
+++ b/Extension/languages/da.json
@@ -2,7 +2,7 @@
     "tab.installed.heading": "Tak fordi du installerede PreMiD",
     "tab.installed.subHeading.didInstallQuestion": "Har du installeret applikationen endnu?",
     "tab.installed.subHeading.notInstalled": "Ikke? Følg disse trin:",
-    "tab.installed.instructions.download": "Download den seneste version for $1",
+    "tab.installed.instructions.download": "Download den seneste version fra {{github_link}}",
     "tab.installed.instructions.github": "mit GitHub depot",
     "tab.installed.instructions.wait": "Åben installatøren og vent til den er installeret",
     "tab.installed.instructions.warnings": "Du modtager nok en advarsel om FireWall og SmartScreen (Jeg lover, det er ikke en virus)",
@@ -23,25 +23,18 @@
     "popup.options.mediaControls": "Mediekontrol",
     "popup.options.checkForUpdates": "Tjek for opdateringer",
     "popup.options.darkTheme": "Mørkt Tema",
-    "connectionInfo.connected": "Forbundet til %SERVICE%",
-    "connectionInfo.disconnected": "Afbrudt fra %SERVICE%",
     "popup.options.systemStartup": "System startup",
-    "presence.episode": "Episode",
+    "presence.episode": "Episode {{episode}}",
     "presence.browsing": "Browsing...",
-    "presence.watching": "ser",
+    "presence.watching": "Seere",
     "tab.installed.letsStart": "Lad os begynde!",
     "tab.installed.getSupport": "Få hjælp",
     "tab.installed.likeThisProject": "Synes godt om dette projekt? Stjern det på $1!",
     "tab.updated.gotIt": "Forstået!",
-    "tab.updated.added0": "Nyt design!",
-    "tab.updated.added1": "Rabb.it understøttelse",
-    "tab.updated.nextVersion.added2": "Amazon Prime understøttelse",
-    "tab.updated.added3": "Anime4You understøttelse",
-    "tab.updated.nextVersion.added4": "CrunchyRoll understøttelse",
-    "tab.updated.changed0": "Masser af insekter dræbt, de ville ikke genere dig længere",
-    "tab.updated.changed1": "Masser af omskrivninger",
     "extension.description": "PreMiD tilføjer Discord Rich Presence integration, mediekontrol og meget mere til YouTube/YouTube Musik, Twitch etc...",
     "popup.options.connectInfo": "Forbindelsesinformation",
     "popup.error": "Fejl",
-    "popup.error.message": "Kunne ikke indlæse kredit"
+    "popup.error.message": "Kunne ikke indlæse kredit",
+    "presence.lookingForAnime": "Søger efter Anime...",
+    "tabPriority.prioritized": "Fane prioteret"
 }
