Update fr.json (POEditor.com)

--- a/Extension/languages/fr.json
+++ b/Extension/languages/fr.json
@@ -23,26 +23,29 @@
     "popup.options.mediaControls": "Commandes multimédias",
     "popup.options.checkForUpdates": "Rechercher des mises à jour",
     "popup.options.darkTheme": "Thème Sombre",
-    "connectionInfo.connected": "Connecté à %SERVICE%",
-    "connectionInfo.disconnected": "Déconnecté de %SERVICE%",
     "popup.options.systemStartup": "Démarrage du système",
-    "presence.episode": "",
-    "presence.browsing": "",
-    "presence.watching": "",
-    "tab.installed.letsStart": "",
-    "tab.installed.getSupport": "",
+    "presence.episode": "Épisode",
+    "presence.browsing": "En train de naviguer...",
+    "presence.watching": "en train de regarder",
+    "tab.installed.letsStart": "Commençons!",
+    "tab.installed.getSupport": "Obtenir de l'aide",
     "tab.installed.likeThisProject": "",
     "tab.updated.gotIt": "",
-    "tab.updated.added0": "",
-    "tab.updated.added1": "",
-    "tab.updated.nextVersion.added2": "",
-    "tab.updated.added3": "",
-    "tab.updated.nextVersion.added4": "",
+    "extension.description": "PreMiD ajoute l'intégration Discord Rich Presence, les commandes multimédias et bien plus encore à YouTube/YouTube Music, Twitch, etc...",
+    "popup.options.connectInfo": "Informations de connexion",
+    "popup.error": "Erreur",
+    "popup.error.message": "Impossible de charger les crédits",
+    "presence.lookingForAnime": "En attente d'Anime...",
+    "tabPriority.prioritized": "",
+    "popup.options.tabPriority": "",
     "tab.updated.changed0": "",
     "tab.updated.changed1": "",
-    "extension.description": "",
-    "popup.options.connectInfo": "",
-    "popup.error": "",
-    "popup.error.message": "",
-    "presence.lookingForAnime": ""
+    "tab.updated.changed2": "",
+    "tab.updated.added0": "",
+    "tab.updated.changed3": "",
+    "tab.updated.changed4": "",
+    "tab.updated.added1": "",
+    "tab.updated.added2": "",
+    "tab.updated.changed5": "",
+    "tab.updated.changed6": ""
 }
