Update de.json (POEditor.com)

--- a/Extension/languages/de.json
+++ b/Extension/languages/de.json
@@ -1,49 +1,51 @@
 {
-  "tab.installed.heading": "Vielen Dank für das Installieren von PreMiD",
-  "tab.installed.subHeading.didInstallQuestion": "Hast du die Application schon installiert?",
-  "tab.installed.subHeading.notInstalled": "Nein? Folge diesen Schritten:",
-  "tab.installed.instructions.download": "Lade dir die neueste Version von $1 herunter",
-  "tab.installed.instructions.github": "GitHub",
-  "tab.installed.instructions.wait": "Öffne das Installationsprogramm und warte bis es installiert ist",
-  "tab.installed.instructions.warnings": "Möglicherweise bekommst du eine Warnung von deiner FireWall und SmartScreen (Es ist kein Virus. Das verspreche ich!)",
-  "tab.installed.instructions.autostart": "Die Application sollte automatisch starten. Du kannst dies mit einem Blick auf deine Taskbar (Windows) oder deine Menubar (Mac OS) überprüfen",
-  "tab.installed.subHeading.ready": "Ja? Jetzt bis du bereit!",
-  "tab.installed.intro": "Starte indem du einen unserer unterstützten services benutzt und genieße den süßen Geschmack von Coolness!",
-  "tab.updated.heading": "PreMiD wurde aktualisiert!",
-  "tab.updated.subHeading.whatsNew": "Was ist neu?",
-  "tab.updated.subHeading.whatChanged": "Was hat sich geändert?",
-  "presence.playback.playing": "Wiedergabe",
-  "presence.playback.paused": "Wiedergabe pausiert",
-  "popup.tabs.options": "Einstellungen",
-  "popup.tabs.credits": "Credits",
-  "popup.options.headings.general": "Generell",
-  "popup.options.headings.presences": "Presenzen",
-  "popup.options.enabled": "Aktiviert",
-  "popup.options.titleMenubar": "Titel Menubar",
-  "popup.options.mediaControls": "Medienkontrolle",
-  "popup.options.checkForUpdates": "Auf Updates überprüfen",
-  "popup.options.darkTheme": "Dunkles Farbschema",
-  "popup.options.tabPriority": "Tab Priorität Info",
-  "connectionInfo.connected": "Mit %SERVICE% verbunden",
-  "connectionInfo.disconnected": "Von %SERVICE% getrennt",
-  "popup.options.systemStartup": "Systemstart",
-  "presence.episode": "Episode {{episode}}",
-  "presence.browsing": "Stöbert...",
-  "presence.watching": "schauen zu",
-  "tab.installed.letsStart": "Lass uns loslegen!",
-  "tab.installed.getSupport": "Erhalte Support",
-  "tab.installed.likeThisProject": "Du magst das Projekt? Gib uns auf $1 einen Stern!",
-  "tab.updated.gotIt": "Hab es!",
-  "tab.updated.added0": "Neues Design!",
-  "tab.updated.added1": "Rabb.it-Unterstüzung",
-  "tab.updated.nextVersion.added2": "Amazon Prime-Unterstüzung",
-  "tab.updated.added3": "Anime4You-Unterstüzung",
-  "tab.updated.nextVersion.added4": "CrunchyRoll-Unterstüzung",
-  "tab.updated.changed0": "Viele Fehler wurden getötet, sie werden dich nun nicht mehr ärgern",
-  "tab.updated.changed1": "Vieles neugeschrieben",
-  "extension.description": "PreMiD fügt Discord-Rich-Presence-Integration, Medienkontrolle und vieles mehr zu YouTube/YouTube Music, Twitch etc. hinzu...",
-  "popup.options.connectInfo": "Verbindungs Info",
-  "popup.error": "Fehler",
-  "popup.error.message": "Konnte Credits nicht laden",
-  "presence.lookingForAnime": "Sucht Anime..."
+    "tab.installed.heading": "Vielen Dank für das Installieren von PreMiD",
+    "tab.installed.subHeading.didInstallQuestion": "Hast du die Application schon installiert?",
+    "tab.installed.subHeading.notInstalled": "Nein? Folge diesen Schritten:",
+    "tab.installed.instructions.download": "Lade dir die neueste Version von {{github_link}} herunter",
+    "tab.installed.instructions.github": "meinem GitHub Repository",
+    "tab.installed.instructions.wait": "Öffne das Installationsprogramm und warte bis es installiert ist",
+    "tab.installed.instructions.warnings": "Möglicherweise bekommst du eine Warnung von deiner FireWall und SmartScreen (Es ist kein Virus. Das verspreche ich!)",
+    "tab.installed.instructions.autostart": "Die Application sollte automatisch starten. Du kannst dies mit einem Blick auf deine Taskbar (Windows) oder deine Menubar (Mac OS) überprüfen",
+    "tab.installed.subHeading.ready": "Ja? Jetzt bis du bereit!",
+    "tab.installed.intro": "Starte indem du einen unserer unterstützten services benutzt und genieße den süßen Geschmack von Coolness!",
+    "tab.updated.heading": "PreMiD wurde aktualisiert!",
+    "tab.updated.subHeading.whatsNew": "Was ist neu?",
+    "tab.updated.subHeading.whatChanged": "Was hat sich geändert?",
+    "presence.playback.playing": "Wiedergabe",
+    "presence.playback.paused": "Wiedergabe pausiert",
+    "popup.tabs.options": "Einstellungen",
+    "popup.tabs.credits": "Credits",
+    "popup.options.headings.general": "Generell",
+    "popup.options.headings.presences": "Presenzen",
+    "popup.options.enabled": "Aktiviert",
+    "popup.options.titleMenubar": "Titel Menubar",
+    "popup.options.mediaControls": "Medienkontrolle",
+    "popup.options.checkForUpdates": "Auf Updates überprüfen",
+    "popup.options.darkTheme": "Dunkles Farbschema",
+    "popup.options.systemStartup": "Systemstart",
+    "presence.episode": "Episode {{episode}}",
+    "presence.browsing": "Stöbert...",
+    "presence.watching": "Schaut",
+    "tab.installed.letsStart": "Lass uns loslegen!",
+    "tab.installed.getSupport": "Erhalte Support",
+    "tab.installed.likeThisProject": "Du magst das Projekt? Gib uns auf $1 einen Stern!",
+    "tab.updated.gotIt": "Verstanden!",
+    "extension.description": "PreMiD fügt Discord-Rich-Presence-Integration, Medienkontrolle und vieles mehr zu YouTube/YouTube Music, Twitch etc. hinzu...",
+    "popup.options.connectInfo": "Verbindungs Info",
+    "popup.error": "Fehler",
+    "popup.error.message": "Konnte Credits nicht laden",
+    "presence.lookingForAnime": "Sucht Anime...",
+    "tabPriority.prioritized": "Tab priorisiert",
+    "popup.options.tabPriority": "Tab Priorität's Info",
+    "tab.updated.changed0": "Kompletter recode der Erweiterung",
+    "tab.updated.changed1": "Tab Priorität funktioniert jetzt wie Sie es schon immer sollte",
+    "tab.updated.changed2": "Nervige Bugs getötet",
+    "tab.updated.added0": "CrunchyRoll Support",
+    "tab.updated.changed3": "Netflix zeigt jetzt bei Filmen Schaut \"Filmname\"",
+    "tab.updated.changed4": "Medien Kontrolle gefixt",
+    "tab.updated.added1": "Aniflix Support",
+    "tab.updated.added2": "Tab Priorität's Schalter",
+    "tab.updated.changed5": "Übersetzungssystem überarbeitet",
+    "tab.updated.changed6": "Englische Fehler Meldung in den Credits behoben"
 }
