Update es.json (POEditor.com)

--- a/Extension/languages/es.json
+++ b/Extension/languages/es.json
@@ -2,13 +2,13 @@
     "tab.installed.heading": "Gracias por instalar PreMID",
     "tab.installed.subHeading.didInstallQuestion": "Ya has instalado esta aplicación?",
     "tab.installed.subHeading.notInstalled": "No? Sigue estos pasos.",
-    "tab.installed.instructions.download": "Descarga la versión mas nueva desde $1",
+    "tab.installed.instructions.download": "Descarga la versión mas nueva de",
     "tab.installed.instructions.github": "Mi repositorio de GitHub",
     "tab.installed.instructions.wait": "Abrir el instalador y esperar hasta que se instale",
     "tab.installed.instructions.warnings": "Tu puedes recibir una alerta sobre FireWall y SmartScreen (No es un virus lo prometo)",
     "tab.installed.instructions.autostart": "La aplicación debería iniciarse automáticamente, Tu puedes checar esto en la Taskbar (Windows) o tu menubar (MacOS)",
     "tab.installed.subHeading.ready": "Listo? Estas listo para andar!",
-    "tab.installed.intro": "Empieza por ver un video en Youtube, Ver tus streamers favoritos en Twitch, Ve tus animes favoritos en KissAnime o JKAnime, Talvez incluso Netflix... Quien sabe? O solo escucha tus canciones favoritas en Soundcloud y Youtube Music. El menu de configuración puede encontrarse clickeando el icono PreMID en tu navegador.",
+    "tab.installed.intro": "Empieza por usar unos de nuestros servicios soportados y disfruta el dulce sabor de tener estilo!",
     "tab.updated.heading": "PreMID ha sido actualizado!",
     "tab.updated.subHeading.whatsNew": "¿Que es nuevo?",
     "tab.updated.subHeading.whatChanged": "¿Que cambió?",
@@ -23,8 +23,6 @@
     "popup.options.mediaControls": "Controles Multimedia",
     "popup.options.checkForUpdates": "Ver si hay actualizaciones",
     "popup.options.darkTheme": "Tema Oscuro",
-    "connectionInfo.connected": "Conectado a %SERVICE%",
-    "connectionInfo.disconnected": "Desconectado de %SERVICE%",
     "popup.options.systemStartup": "Inicio del Sistema",
     "presence.episode": "Episodio",
     "presence.browsing": "Navegando...",
@@ -33,15 +31,10 @@
     "tab.installed.getSupport": "Obtén soporte",
     "tab.installed.likeThisProject": "Te gusta este proyecto? Sopórtalo por $1",
     "tab.updated.gotIt": "Entendido!",
-    "tab.updated.added0": "Nuevo diseño!",
-    "tab.updated.added1": "Soporte de Rabb.it",
-    "tab.updated.nextVersion.added2": "Soporte de Amazon Prime",
-    "tab.updated.added3": "Soporte de Anime4YOU",
-    "tab.updated.nextVersion.added4": "Soporte de CrunchyRoll",
-    "tab.updated.changed0": "Muchos bugs matados, Ellos no te molestaran mas!",
-    "tab.updated.changed1": "Muchas re-escribidas.",
     "extension.description": "PreMID agrega integración de Presencia rica de discord, Controles Multimedia y mucho mas a Youtube/Youtube Music, Twitch etc...",
     "popup.options.connectInfo": "Información de la conexión",
     "popup.error": "Error",
-    "popup.error.message": "No se pudieron cargar los creditos"
+    "popup.error.message": "No se pudieron cargar los creditos",
+    "presence.lookingForAnime": "Buscando por Anime...",
+    "tabPriority.prioritized": "Pestaña priorizada"
 }
